2013-06-06 Lubos Dolezel <lubos@dolezel.info>

	* Source/NSCFString.m,
	* Tests/CFString/objc_bridge.m,
	* Tests/CFString/objc_bridge_from_cf.m,
	* Source/CFString.c: Improved TFB for CFString

2013-06-06 Lubos Dolezel <lubos@dolezel.info>

	* Source/CFSet.c,
	* Source/NSCFSet.m,
	* Tests/CFSet/objc_bridge.m: Add CFSet bridging support
	* Source/GSPrivate.h: Add variable argument helper macros

2013-03-16 Fred Kiefer <fredkiefer@gmx.de>

	* Source/CFPropertyList.c,
	* Source/CFString.c,
	* Source/CFRunLoop.c: Remove compiler warnings
	* Source/CFURL.c: Remove compiler warnings and get tests to work.
	* Source/CFStringEncoding.c: Add missing code for UTF16.
	* Source/NSCFString.m: Comment out all methods where super class code
	is more complete.

2012-12-20 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStringEncoding.c: Added UTF-32 conversion. Added non-lossy
	ASCII conversion functions. Consolidated some frequently used
	constructs into macros for easy maintenance.
	* Source/CFString.c: Short-cut for converting UTF-16 to UTF-16.
	* Tests/CFString/encodings.m: Added another test.

2012-12-18 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStringEncoding.c: Added local function to convert UTF-32
	to/from UTF-16 (unused at this time).
	* Source/CFString.c: Fix bugs related to changes to
	GSStringEncodingToUnicode().
	* Tests/CFString/encodings.m: Add test for some of the changes made
	to Unicode conversion.

2012-12-17 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStringEncoding.c: Add local function to converted UTF-8
	to/from UTF-16.
	* Source/CFString.c: Modify functions for getting characters.
	* Source/NSCFError.m:
	* Source/NSCFData.m: Include NSString.h to avoid compiler warning.

2012-12-12 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/config.h.in:
	* configure:
	* configure.ac: Add test for endianess and size of void *.
	* Source/GSPrivate.h: Use result of endianess test.

2012-11-11 Stefan Bidigaray <stefanbidi@gmail.com>
