@@ -382,6 +382,41 @@ CFLocaleReturnNull (CFLocaleRef loc, const void *context)
   return NULL;
 }
 
+#if HAVE_LIBOBJC || HAVE_LIBOBJC2
+static CFStringRef CFLocaleKeyToNSLocaleKey(CFStringRef key)
+{
+  CFStringRef nsKey = NULL;
+#define CASE(keyName) if(CFStringCompare(key, kCF##keyName, 0) == 0) nsKey = CFSTR("NS" #keyName); else
+  CASE(LocaleIdentifier)
+  CASE(LocaleLanguageCode)
+  CASE(LocaleCountryCode)
+  CASE(LocaleScriptCode)
+  CASE(LocaleVariantCode)
+  CASE(LocaleExemplarCharacterSet)
+  CASE(LocaleCalendar)
+  CASE(LocaleCollationIdentifier)
+  CASE(LocaleUsesMetricSystem)
+  CASE(LocaleMeasurementSystem)
+  CASE(LocaleDecimalSeparator)
+  CASE(LocaleGroupingSeparator)
+  CASE(LocaleCurrencySymbol)
+  CASE(LocaleCurrencyCode)
+  CASE(LocaleCollatorIdentifier)
+  CASE(LocaleQuotationBeginDelimiterKey)
+  CASE(LocaleQuotationEndDelimiterKey)
+  CASE(LocaleAlternateQuotationBeginDelimiterKey)
+  CASE(LocaleAlternateQuotationEndDelimiterKey);
+	
+#undef CASE
+  return nsKey;
+}
+#else
+static CFStringRef CFLocaleKeyToNSLocaleKey(CFStringRef key)
+{
+	return NULL;
+}
+#endif
+
 static struct _kCFLocaleValues
 {
   const CFStringRef *value;
@@ -626,6 +661,9 @@ CFLocaleCopyDisplayNameForPropertyValue (CFLocaleRef displayLocale,
                                          CFStringRef key,
                                          CFStringRef value)
 {
+  CF_OBJC_FUNCDISPATCH2(_kCFLocaleTypeID, CFTypeRef, displayLocale,
+    "displayNameForKey:value:", CFLocaleKeyToNSLocaleKey(key), value);
+
   CFStringRef ident;
   CFIndex cvaluelen;
   char displocale[ULOC_FULLNAME_CAPACITY];
@@ -710,6 +748,9 @@ CFTypeRef
 CFLocaleGetValue (CFLocaleRef locale,
                   CFStringRef key)
 {
+  CF_OBJC_FUNCDISPATCH1(_kCFLocaleTypeID, CFTypeRef, locale,
+    "objectForKey:", CFLocaleKeyToNSLocaleKey(key));
+
   CFTypeRef result = NULL;
   CFIndex idx;
   Boolean found = false;
@@ -760,6 +801,8 @@ CFLocaleGetValue (CFLocaleRef locale,
 CFStringRef
 CFLocaleGetIdentifier (CFLocaleRef locale)
 {
+  CF_OBJC_FUNCDISPATCH0(_kCFLocaleTypeID, CFStringRef, locale,
+    "localeIdentifier"); 
   return locale->_identifier;
 }
 
